fix: update primary color in CSS for consistency

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Henrique Derlam Zwetsch - Cloud Resume</title>
     <style>
         :root {
-            --primary-color: #2c3e50;
+            --primary-color: #007efb;
             --secondary-color: #34495e;
             --accent-color: #3498db;
             --bg-color: #f4f7f6;
